# achuk

./: .drone.yml  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  NOTICE  README.md  install.sh
.github/: social-preview.html
.github/ISSUE_TEMPLATE/: benchmark-task.md  grammar-or-bug.md
.github/workflows/: ci.yml  release.yml
bench/: README.md  gen_tasks.py
bench/grader/: Cargo.toml
bench/grader/src/: exec.rs  lib.rs  realc.rs
bench/grammars/: gen-add7-v1.gbnf  gen-addmin.gbnf  gen-atleast3-v2.gbnf  gen-atmost1-v2.gbnf  gen-mul3-v1.gbnf  gen-plat-readfile.gbnf  ho-guard-dec.gbnf  ho-home-len.gbnf  ho-label-len.gbnf  ho-neither-zero.gbnf  ho-pick.gbnf  ho-shrink.gbnf  ho-tip.gbnf
bench/runner/: Cargo.toml
bench/runner/src/: lib.rs  main.rs
bench/runner/tests/: tasks_validate.rs
bench/tasks/: contract-001.json  contract-002.json  contract-003.json  contract-004.json  effect-001.json  effect-002.json  effect-003.json  effect-004.json  from-scratch-001.json  from-scratch-002.json  from-scratch-003.json  from-scratch-004.json  from-scratch-005.json  from-scratch-006.json  from-scratch-007.json  from-scratch-008.json  repo-feature-001.json  repo-feature-002.json  repo-feature-003.json  repo-feature-004.json  repo-feature-005.json  repo-feature-006.json  repo-feature-007.json  repo-feature-008.json  translate-001.json  translate-002.json  translate-003.json  translate-004.json  translate-005.json  translate-006.json  translate-007.json
bench/tasks-holdout/: ho-js-min3.json  ho-larger.json  ho-py-relu.json
bench/tasks-large/: gen-add1-v1.json  gen-add10-v1.json  gen-add100-v1.json  gen-add2-v1.json  gen-add3-v1.json  gen-add4-v1.json  gen-add5-v1.json  gen-add7-v1.json  gen-atleast1-v1.json  gen-atleast10-v1.json  gen-atleast100-v1.json  gen-atleast2-v1.json  gen-atleast3-v1.json  gen-atleast4-v1.json  gen-atleast5-v1.json  gen-atleast7-v1.json  gen-atmost1-v1.json  gen-atmost10-v1.json  gen-atmost100-v1.json  gen-atmost2-v1.json  gen-atmost3-v1.json  gen-atmost4-v1.json  gen-atmost5-v1.json  gen-atmost7-v1.json  gen-mul1-v1.json  gen-mul10-v1.json  gen-mul100-v1.json  gen-mul2-v1.json  gen-mul3-v1.json  gen-mul4-v1.json  gen-mul5-v1.json  gen-mul7-v1.json  gen-plat-catfile.json  gen-plat-envupper.json  gen-plat-getenv.json  gen-plat-println.json  gen-plat-purecat.json  gen-plat-readboth.json  gen-plat-readfile.json  gen-plat-readupper.json  (+2 more)
cdb/: Cargo.toml
cdb/src/: lib.rs
cli/: Cargo.toml
cli/src/: ai.rs  main.rs
compiler/: UPSTREAM.md  build.zig
compiler/src/canonicalize/: HostedCompiler.zig
compiler/src/cli/: cli_args.zig  main.zig
compiler/src/compile/: cache_config.zig
compiler/src/ipc/: coordination.zig
compiler/src/watch/: watch.zig
compiler/test/http-headers/platform/: host.zig
constraint-server/: Cargo.toml
constraint-server/src/: gbnf.rs  lib.rs
contract/: Cargo.toml
contract/src/: eval.rs  lib.rs  property.rs
corpus/: Cargo.toml
corpus/src/: lib.rs
crates/achuk-core/: Cargo.toml
crates/achuk-core/src/: interp.rs  lib.rs  render.rs
crates/claw-core/: Cargo.toml
crates/claw-core/src/: interp.rs  lib.rs  parse.rs  render.rs
diagnostics/: Cargo.toml
diagnostics/src/: lib.rs
docs/: baseline-2026-07-03.md  benchmark-harness.md  corpus-audit-2026-07-05.md  e4b-experiment-2026-07-05.md  ecosystem.md  fork-strategy.md  getting-started.md  holdout-a2-realcompile-2026-07-05.md  inheritance-audit.md  master-plan.md  mcp.md  networking.md  p2-spec.md  p4-gate-2026-07-04.md  p4-regate-2026-07-04.md  p4-v3-gate-2026-07-05.md  parity-2026-07-05.md  registry-playground-plan.md  releasing.md  syntax.md  telemetry.md  tour.md
editors/vscode/: .gitignore  README.md  claw-lang-0.1.0.vsix  package.json
editors/vscode/syntaxes/: claw.tmLanguage.json
effects/: Cargo.toml
effects/src/: lib.rs
emit-rust/: Cargo.toml
emit-rust/src/: lib.rs
examples/: args.achuk  args.claw  classify.achuk  classify.claw  fizzbuzz.achuk  fizzbuzz.claw  gradebook.achuk  hello.achuk  hello.claw  primes.achuk  stats.achuk
examples/crm/: domain.claw
launch/: maharashtra-press.md  media-list.md  press-release-mr.html  press-release.md  show-hn.md  x-thread.md
lsp/: Cargo.toml
lsp/src/: main.rs
mcp/: Cargo.toml
mcp/src/: main.rs
playground/: index.html
playground/wasm/: Cargo.toml
playground/wasm/pkg/: claw_play.d.ts  claw_play_bg.wasm  claw_play_bg.wasm.d.ts  package.json
playground/wasm/src/: lib.rs
registry/: README.md
registry/service/: .gitignore  Cargo.toml
registry/service/src/: auth.rs  main.rs  ui.rs
scripts/: package.sh
site/: docs.html  index.html  install.ps1  llms.txt  playground.html  robots.txt  sitemap.xml  story.html
site/pkg/: achuk_play.js  achuk_play_bg.wasm  claw_play.js
telemetry/: Cargo.toml
telemetry/src/: lib.rs
telemetry/worker/: index.js  wrangler.toml
train/: .gitignore  README.md  RESULT-2026-07-04.md  a2_eval.py  corpus-full.jsonl  corpus-v2.jsonl  corpus-v3.jsonl  corpus-v4.jsonl  corpus.jsonl  eval_failures.py  eval_gate.py  eval_gate_batched.py  gen_targeted.py  merge_lora.py  outputs-7b-large.jsonl  outputs-e4b-holdout.jsonl  outputs-e4b-large.jsonl  outputs-v4-large.jsonl  parity-claw.jsonl  parity-go.jsonl  parity-js.jsonl  parity-py.jsonl  parity-rs.jsonl  parity_gen.py  parity_grade.py  targeted.jsonl  train.py  train_e4b.py
