[package]
name = "achuk-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "achuk"
path = "src/main.rs"

[dependencies]
achuk-core = { path = "../crates/achuk-core" }
achuk-cdb = { path = "../cdb" }
achuk-constraint = { path = "../constraint-server" }
achuk-emit-rust = { path = "../emit-rust" }
achuk-corpus = { path = "../corpus" }
achuk-contract = { path = "../contract" }
achuk-bench-grader = { path = "../bench/grader" }
achuk-telemetry = { path = "../telemetry" }
ureq = { version = "2", features = ["json"] }
sha2 = "0.10"
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
