[package]
name = "claw-constraint"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
# The CDB-backed query path (legal_continuations). Off for wasm targets,
# where the grammar projection runs over caller-supplied continuations.
default = ["cdb"]
cdb = ["dep:claw-cdb"]

[dependencies]
claw-core = { path = "../crates/claw-core" }
claw-cdb = { path = "../cdb", optional = true }
claw-diagnostics = { path = "../diagnostics" }
serde = { workspace = true }
