[package]
name = "achuk-constraint"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
# The CDB-backed query path (legal_continuations). Off for wasm targets,
# where the grammar projection runs over caller-supplied continuations.
default = ["cdb"]
cdb = ["dep:achuk-cdb"]

[dependencies]
achuk-core = { path = "../crates/achuk-core" }
achuk-cdb = { path = "../cdb", optional = true }
achuk-diagnostics = { path = "../diagnostics" }
serde = { workspace = true }
