[package]
name = "achuk-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "achuk-mcp"
path = "src/main.rs"

[dependencies]
achuk-core = { path = "../crates/achuk-core" }
achuk-cdb = { path = "../cdb" }
achuk-constraint = { path = "../constraint-server" }
achuk-bench-grader = { path = "../bench/grader" }
achuk-telemetry = { path = "../telemetry" }
serde_json = { workspace = true }
anyhow = { workspace = true }
