[package]
name = "claw-bench-grader"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
claw-core = { path = "../../crates/claw-core" }
claw-cdb = { path = "../../cdb" }
claw-effects = { path = "../../effects" }
claw-contract = { path = "../../contract" }
serde = { workspace = true }
anyhow = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
