[package]
name = "achuk-bench-grader"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
achuk-core = { path = "../../crates/achuk-core" }
achuk-cdb = { path = "../../cdb" }
achuk-effects = { path = "../../effects" }
achuk-contract = { path = "../../contract" }
serde = { workspace = true }
anyhow = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
