[package]
name = "claw-bench-runner"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "claw-bench"
path = "src/main.rs"

[dependencies]
claw-core = { path = "../../crates/claw-core" }
claw-constraint = { path = "../../constraint-server" }
claw-bench-grader = { path = "../grader" }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
ureq = { version = "2", features = ["json"] }
