[package]
name = "achuk-bench-runner"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "achuk-bench"
path = "src/main.rs"

[dependencies]
achuk-core = { path = "../../crates/achuk-core" }
achuk-constraint = { path = "../../constraint-server" }
achuk-bench-grader = { path = "../grader" }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
ureq = { version = "2", features = ["json"] }
