[package]
name = "achuk-play"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
achuk-core = { path = "../../crates/achuk-core" }
achuk-constraint = { path = "../../constraint-server", default-features = false }
serde = { workspace = true }
serde_json = { workspace = true }
wasm-bindgen = "0.2"
